--- a/zap/wivet/configured/report/zap-session/20180725-133017-20180725-145305.session.properties
+++ b/zap/wivet/configured/report/zap-session/20180725-133017-20180725-145305.session.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Sun Aug 26 22:04:33 EDT 2018
+#Mon Aug 27 11:24:26 EDT 2018
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
